dex/overlays/production/ingress-dex.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: org-issuer
  name: dex
  namespace: dex
spec:
  rules:
  - host: dex.119-8-58-20.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dex
            port:
              number: 5556
  tls:
  - hosts:
    - dex.119-8-58-20.nip.io
    secretName: dex-cert
